# distributed-sync-system

./: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt  test_config.py  test_simple_message.py
src/communication/: failure_detector.py  message_passing.py
src/consensus/: raft.py
src/nodes/: base_node.py  deadlock_detector.py  lock_manager.py  queue_node.py
src/utils/: config.py  consistent_hash.py  logger.py
tests/integration/: test_base_node.py  test_lock_manager.py  test_queue.py  test_raft.py
